# delfast

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cross-compile-mac.yml  release.yml
src/: main.rs
